feat(kinds): add support for filtering kinds
